# rapyuta-io-cli

./: .buildinfo  .device.yaml.swp  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  CLAUDE.md  CNAME  CONTRIBUTING.md  Pipfile  README.md  apply.html  auth.html  chart.html  completion.html  config_tree.html  deployment.html  device.html  device.yaml  disk.html  genindex.html  hwil.html  index.html  jsonschema  justfile  managedservice.html  network.html  objects.inv  organization.html  package.html  parameter.html  project.html  pyproject.toml  rosbag.html  search.html  searchindex.js  secret.html  setup.py  static_route.html  usergroup.html  (+1 more)
.github/: CODEOWNERS
.github/workflows/: code-quality.yml  conventional-commits.yml  gh-pages.yml  pull-request.yml  pypi.yml  python-compatibility.yml  release.yml  upload-appimage.yml
_sources/: apply.rst.txt  auth.rst.txt  chart.rst.txt  completion.rst.txt  deployment.rst.txt  device.rst.txt  disk.rst.txt  hwil.rst.txt  index.rst.txt  managedservice.rst.txt  network.rst.txt  organization.rst.txt  parameter.rst.txt  project.rst.txt  rosbag.rst.txt  secret.rst.txt  static_route.rst.txt  usergroup.rst.txt  vpn.rst.txt
_static/css/: rio-sphinx.css
_static/js/: rio-sphinx.js
docs/: update-channels.md
docs/source/: build.rst  conf.py  config_tree.rst  index.rst  package.rst
examples/: manifests  marketplace_dependencies_format.sample.yaml  sample_wcs_package.json  simple-creation.cast
examples/cvat/: 01-disks.yaml  02-deployment.yaml  03-extra-tools.yaml
examples/demo/: all-in-one.yaml  values.yaml
examples/kiba-robots/: 00_disk.yaml  01_secret.yaml  02_routednetwork.yaml  03_edge_packages.yaml  03_packages.yaml  03_routes.yaml  04_ims.yaml  05-wcs.yaml  05_wcs.yaml  06_onlydb.yaml  all-in-one.yaml  secrets.staging.yaml  values.yaml
examples/manifests/: 02-secret-git.yaml  03-secret-docker.yaml  05-build-docker.yaml  09-cloud-routed-network.yaml  10-device-routed-network.yaml  11-cloud-native-network.yaml  12-device-native-network.yaml  13-static-route.yaml  14-package.yaml
jsonschema/: build-schema.json  build-schema.yaml  deployment-schema.yaml  device-schema.json  device-schema.yaml  disk-schema.yaml  managedservice-schema.yaml  network-schema.json  network-schema.yaml  package-schema.yaml  project-schema.json  project-schema.yaml  secret-schema.json  secret-schema.yaml  static_route-schema.yaml
lisp/: README.md  rio.el  tramp-rio.el
riocli/: __init__.py  __main__.py  bootstrap.py  ssh_ensure_cert.py
riocli/apply/: __init__.py  custom.py  explain.py  filters.py  parse.py  resolver.py  template.py  util.py
riocli/auth/: __init__.py  device_flow.py  login.py  logout.py  refresh_token.py  staging.py  status.py  token.py  util.py
riocli/backup/: __init__.py  create.py  delete.py  inspect.py  list.py  model.py  util.py
riocli/chart/: __init__.py  apply.py  chart.py  delete.py  info.py  list.py  search.py  util.py
riocli/completion/: __init__.py
riocli/compose/: __init__.py  compose.py  defaults.py  down.py  generate.py  model.py  populate.py  up.py
riocli/config/: __init__.py  config.py  context.py
riocli/configtree/: __init__.py  diff.py  etcd.py  export_keys.py  import_keys.py  merge.py  revision.py  tree.py  util.py
riocli/constants/: __init__.py  colors.py  regions.py  status.py  symbols.py
riocli/convert/: __init__.py  compose.py  defaults.py  model.py  populate.py  utils.py
riocli/database/: __init__.py  backup.py  delete.py  inspect.py  list.py  model.py  util.py  versions.py
riocli/deployment/: __init__.py  delete.py  errors.py  execute.py  inspect.py  list.py  logs.py  model.py  run.py  ssh.py  status.py  update.py  util.py  validation.py  wait.py
riocli/device/: __init__.py  config.py  create.py  delete.py  deployment.py  execute.py  files.py  inspect.py  label.py  list.py  metric.py  migrate.py  model.py  onboard.py  report.py  ssh.py  topic.py  util.py  validation.py  vpn.py
riocli/disk/: __init__.py  create.py  delete.py  enum.py  list.py  model.py  util.py  validation.py
riocli/exceptions/: __init__.py
scripts/: AppRun  build-rio-appimage.sh  bump-version.sh  generate-validation.py  install.sh
tests/: .password.example  .sops.yaml  .test.config.json  README.md  conftest.py  justfile
(+410 files in other folders)
