[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "rapyuta-io-cli"
dynamic = ["version"]
description = "rapyuta.io Command Line Interface"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8.10"
authors = [
    { name = "Rapyuta Robotics", email = "opensource@rapyuta-robotics.com" },
]
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "argparse>=1.4.0",
    "click-completion>=0.5.2",
    "click-help-colors>=0.9.1",
    "click-plugins>=1.1.1",
    "click-repl>=0.2.0",
    "click-spinner>=0.1.10",
    "click>=8.0.1",
    "dictdiffer>=0.9.0",
    "directory-tree>=0.0.3.1",
    "email-validator==2.0.0.post2",
    "etcd3gw>=2.4.0",
    "graphlib-backport>=1.0.3",
    "graphviz>=0.20.3",
    "jinja2>=3.0.1",
    "jsonschema==4.23.0",
    "munch>=2.4.0",
    "pretty-traceback>=2022.1018",
    "pyrfc3339>=1.1",
    "python-benedict>=0.33.2",
    "python-dateutil>=2.8.2",
    "python-hosts>=1.0.7",
    "python-magic>=0.4.27",
    "pytz",
    "pyyaml>=5.4.1",
    "rapyuta_io>=2.3.1",
    "requests>=2.20.0",
    "semver>=3.0.0",
    "setuptools",
    "six>=1.13.0",
    "tabulate>=0.8.0",
    "urllib3>=1.23",
    "waiting>=1.4.1",
    "yaspin==2.5.0",
    "ansible-core>=2.13.13",
]

[tool.uv]
dev-dependencies = [
    "sphinx",
    "sphinx-click",
    "furo",
]

[project.scripts]
rio = "riocli.bootstrap:safe_cli"

[project.urls]
Homepage = "https://cli.rapyuta.io"
Documentation = "https://cli.rapyuta.io/"
Repository = "https://github.com/rapyuta-robotics/rapyuta-io-cli.git"
Issues = "https://github.com/rapyuta-robotics/rapyuta-io-cli/issues"
Changelog = "https://github.com/rapyuta-robotics/rapyuta-io-cli/blob/main/CHANGELOG.md"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
riocli = [
    "apply/manifests/*.yaml",
    "jsonschema/schemas/*.yaml"
]

[tool.setuptools.dynamic]
version = {attr = "riocli.bootstrap.__version__"}

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

# Same as Black.
line-length = 90
indent-width = 4

# Assume Python 3.8
target-version = "py38"

[tool.ruff.lint]
# Enable Pyflakes (`F`) and a subset of the pycodestyle (`E`)  codes by default.
# Unlike Flake8, Ruff doesn't enable pycodestyle warnings (`W`) or
# McCabe complexity (`C901`) by default.
select = ["E4", "E7", "E9", "F", "B", "Q", "W"]
ignore = ["E741", "B904"]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
#
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = false

# Set the line length limit used when formatting code snippets in
# docstrings.
#
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"
